--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@
 
 @import 'bulma';
 
+// global styles
+
 * {
   transition: color .5s ease;
   transition: background-color .5s ease;
@@ -19,7 +21,7 @@ div.app {
 
 section.container {
   min-height: calc(100vh - 52px);
-
+  padding-bottom: 3rem;
   div.columns {
     margin: 0;
   }
