--- a/src/styles/helpers.scss
+++ b/src/styles/helpers.scss
@@ -69,3 +69,19 @@
 .margin-half--left {
   margin-left: .75rem;
 }
+
+.margin {
+  margin: 1.5rem;
+}
+.margin--top {
+  margin-top: 1.5rem;
+}
+.margin--right {
+  margin-right: 1.5rem;
+}
+.margin--bottom {
+  margin-bottom: 1.5rem;
+}
+.margin--left {
+  margin-left: 1.5rem;
+}
