--- a/src/styles/switch.scss
+++ b/src/styles/switch.scss
@@ -6,58 +6,59 @@
   align-items: center;
   padding: 1rem 0;
   width: 32px;
-}
 
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  height: 20px;
-}
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 20px;
+  }
 
-// Hide default HTML checkbox
-.switch input {
-  display:none;
-}
+  // Hide default HTML checkbox
+  input {
+    display:none;
+  }
 
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 20px;
-  border: 1px solid $text;
-  -webkit-transition: .2s;
-  transition: .2s;
-}
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 20px;
+    border: 1px solid $text;
+    -webkit-transition: .2s;
+    transition: .2s;
+  }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 18px;
-  width: 18px;
-  left: 0;
-  bottom: 0;
-  border-radius: 50%;
-  box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.2);
-  background-color: white;
-  -webkit-transition: .2s;
-  transition: .2s;
-}
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 18px;
+    width: 18px;
+    left: 0;
+    bottom: 0;
+    border-radius: 50%;
+    box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    -webkit-transition: .2s;
+    transition: .2s;
+  }
 
-.sliderUnchecked {
-  background-color: transparent !important;
-}
+  .sliderUnchecked {
+    background-color: transparent !important;
+  }
 
-.sliderChecked {
-  border: 1px solid white;
-  background-color: $primary !important;
-}
+  .sliderChecked {
+    border: 1px solid white;
+    background-color: $primary !important;
+  }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(12px);
-  -ms-transform: translateX(12px);
-  transform: translateX(12px);
+  input:checked + .slider:before {
+    -webkit-transform: translateX(12px);
+    -ms-transform: translateX(12px);
+    transform: translateX(12px);
+  }
+
 }
