--- a/src/styles/blog-post.scss
+++ b/src/styles/blog-post.scss
@@ -19,11 +19,12 @@
   }
 
   .likes {
-    &.active {
+    &.liked {
       color: $primary;
+      cursor: default;
+      pointer-events: none;
     }
     svg {
-      cursor: pointer;
       margin-right: 8px;
     }
   }
