--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,10 +1,23 @@
 #home {
 
   .columns {
+
     .column {
+
       height: calc(100vh - 100px);
       min-height: 600px;
+
+      .tile.is-child.notification {
+        background-color: #232323;
+        transition: all 0.5s ease;
+        &:hover {
+          background-color: #454545;
+          transform: scale(1.02);
+        }
+      }
+
     }
+
   }
 
 }
